--- a/src/mlPipeline/ML_notebook.ipynb
+++ b/src/mlPipeline/ML_notebook.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -12,12 +21,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from sklearn.model_selection import KFold\n",
+    "from sklearn.model_selection import KFold, GridSearchCV\n",
     "from sklearn.model_selection import cross_val_score, cross_validate\n",
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.pipeline import FeatureUnion\n",
@@ -34,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -45,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true,
     "scrolled": true
@@ -62,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -76,27 +85,24 @@
     "# clf = LassoCV()\n",
     "\n",
     "# Set a minimum threshold of 0.25\n",
-    "features = SelectFromModel(LinearSVC(), 0.25)\n",
+    "features = [(\"linSVC_dimReduction\", SelectFromModel(LinearSVC(), 0.25))]\n",
     "# features.append(SelectFromModel(LinearSVC(C=0.01, penalty=\"l1\", dual=False),\n",
     "#                                 threshold=0.25, prefit = False))\n",
-    "feature_union = features#FeatureUnion(features)"
+    "feature_union = FeatureUnion(features)\n",
+    "featureSelectionParamGrid = {} # TODO implement feature selection for feature selection.\n",
+    "modelDict = {}\n",
+    "cv = 10\n",
+    "# TODO when you perform CV with this stuff consider doing memory option stuff\n",
+    "scoring = [\"accuracy\", \"f1\", \"precision\", \"recall\"]\n",
+    "importantMetric = \"f1\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 14,
    "metadata": {
-    "collapsed": true
+    "scrolled": true
    },
-   "outputs": [],
-   "source": [
-    "modelDict = {}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
-   "metadata": {},
    "outputs": [],
    "source": [
     "# create pipeline\n",
@@ -104,28 +110,123 @@
     "estimators_LR.append(('feature_union', feature_union))\n",
     "estimators_LR.append(('logistic', LogisticRegression()))\n",
     "# estimators.append(models)\n",
-    "modelDict[\"logistic\"] = Pipeline(estimators_LR)"
+    "paramGrid_LR = [\n",
+    "    {\n",
+    "        \"logistic__penalty\": ['l1', 'l2'],\n",
+    "        \"logistic__C\": [1, 10, 100, 1000]\n",
+    "    }\n",
+    "]\n",
+    "modelDict[\"logistic\"] = [Pipeline(estimators_LR), paramGrid_LR]\n",
+    "gridcv_LR = GridSearchCV(estimator = modelDict[\"logistic\"][0], cv = cv,\n",
+    "                         param_grid = modelDict[\"logistic\"][1], n_jobs = 1,\n",
+    "                         scoring = scoring, refit = importantMetric)\n",
+    "# TODO understand how linearSVC works with these parameters\n",
+    "# scores = gridcv_LR.fit(X, Y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 20,
    "metadata": {
-    "collapsed": true
+    "scrolled": true
    },
    "outputs": [],
    "source": [
-    "# create pipeline\n",
+    "\n",
+    "# create pipeline for logisttic Regression\n",
+    "estimators_LR = []\n",
+    "estimators_LR.append(('feature_union', feature_union))\n",
+    "estimators_LR.append(('logistic', LogisticRegression()))\n",
+    "# estimators.append(models)\n",
+    "paramGrid_LR = [\n",
+    "    {\n",
+    "        \"logistic__penalty\": ['l1', 'l2'],\n",
+    "        \"logistic__C\": [1, 10, 100, 1000]\n",
+    "    }\n",
+    "]\n",
+    "modelDict[\"logistic\"] = {\"pipe\": Pipeline(estimators_LR),\n",
+    "                         \"params\": paramGrid_LR}\n",
+    "modelDict[\"logistic\"][\"gridcv\"] = GridSearchCV(estimator = modelDict[\"logistic\"][\"pipe\"],\n",
+    "                         param_grid = modelDict[\"logistic\"][\"params\"],\n",
+    "                         cv = cv, n_jobs = 1,\n",
+    "                         scoring = scoring, refit = importantMetric)\n",
+    "# TODO understand how linearSVC works with these parameters\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "# create pipeline for RF\n",
     "estimators_RF = []\n",
     "estimators_RF.append(('feature_union', feature_union))\n",
     "estimators_RF.append(('RFC', RandomForestClassifier()))\n",
     "# estimators.append(models)\n",
-    "modelDict[\"randomForest\"] = Pipeline(estimators_RF)"
+    "paramGrid_RF = [\n",
+    "    {\n",
+    "        \"RFC__n_estimators\": [5, 10, 15, 20],# second most important feature to tune. First\n",
+    "        # is max number of feats.\n",
+    "        \"RFC__max_features\": [\"sqrt\", \"log2\", 0.5],# we have lots of possibly dumb\n",
+    "        # features so it might be good to use lower numbers here\n",
+    "        \"RFC__max_depth\": [None],# still need to understand if deeper trees are better.\n",
+    "        \"RFC__criterion\":[\"gini\"],# no idea if this will make a difference. can check\n",
+    "    }\n",
+    "]\n",
+    "\n",
+    "modelDict[\"randomForest\"] = {\"pipe\": Pipeline(estimators_RF),\n",
+    "                             \"params\": paramGrid_RF}\n",
+    "modelDict[\"randomForest\"][\"gridcv\"] = GridSearchCV(estimator = modelDict[\"randomForest\"][\"pipe\"],\n",
+    "                       param_grid = modelDict[\"randomForest\"][\"params\"],\n",
+    "                       cv = cv, n_jobs = 1,\n",
+    "                       scoring = scoring, refit = importantMetric)\n",
+    "#TODO is it better to build RF trees to purity and prune?\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Create pipeline for SVC\n",
+    "estimators_SVC = []\n",
+    "estimators_SVC.append(('feature_union', feature_union))\n",
+    "estimators_SVC.append(('SVC', SVC()))\n",
+    "# estimators.append(models)\n",
+    "paramGrid_SVC = [\n",
+    "    {\n",
+    "        \"SVC__penalty\": ['l1', 'l2'],\n",
+    "        \"SVC__C\": [1, 10, 100, 1000]\n",
+    "    }\n",
+    "]\n",
+    "modelDict[\"SVC\"] = {\"pipe\":Pipeline(estimators_SVC),\n",
+    "                    \"params\": paramGrid_SVC}\n",
+    "modelDict[\"SVC\"][\"gridcv\"] = GridSearchCV(estimator = modelDict[\"SVC\"][\"pipe\"],\n",
+    "                       param_grid = modelDict[\"SVC\"][\"params\"],\n",
+    "                       cv = cv, n_jobs = 1,\n",
+    "                       scoring = scoring, refit = importantMetric)\n",
+    "\n",
+    "\n",
+    "\n",
+    "# create pipeline for GBTC\n",
+    "estimators_GBTC = []\n",
+    "estimators_GBTC.append(('feature_union', feature_union))\n",
+    "estimators_GBTC.append(('GBTC', GradientBoostingClassifier()))\n",
+    "# estimators.append(models)\n",
+    "paramGrid_GBTC = [\n",
+    "    {\n",
+    "        \"GBTC__learning_rate\": [0.001, 0.01, 0.1],\n",
+    "        \"GBTC__n_estimators\": [50, 100, 200, 300, 400, 500],\n",
+    "        \"GBTC__max_depth\": [1, 3, 5, 10, 12]\n",
+    "    }\n",
+    "]\n",
+    "modelDict[\"GBTC\"] = {\"pipe\": Pipeline(estimators_GBTC),\n",
+    "                     \"params\": paramGrid_GBTC}\n",
+    "modelDict[\"GBTC\"][\"gridcv\"] = GridSearchCV(estimator = modelDict[\"GBTC\"][\"pipe\"],\n",
+    "                       param_grid = modelDict[\"GBTC\"][\"params\"],\n",
+    "                       cv = cv, n_jobs = 1,\n",
+    "                       scoring = scoring, refit = importantMetric)\n",
+    "# modelDict[\"gradientBosting\"] = Pipeline(estimators_GBTC)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -136,15 +237,23 @@
     "estimators_SVC.append(('feature_union', feature_union))\n",
     "estimators_SVC.append(('SVC', SVC()))\n",
     "# estimators.append(models)\n",
-    "modelDict[\"SVC\"] = Pipeline(estimators_SVC)"
+    "paramGrid_SVC = [\n",
+    "    {\n",
+    "        \"SVC__penalty\": ['l1', 'l2'],\n",
+    "        \"SVC__C\": [1, 10, 100, 1000]\n",
+    "    }\n",
+    "]\n",
+    "modelDict[\"SVC\"] = {\"pipe\":Pipeline(estimators_SVC),\n",
+    "                    \"params\": paramGrid_SVC}\n",
+    "modelDict[\"SVC\"][\"gridcv\"] = GridSearchCV(estimator = modelDict[\"SVC\"][\"pipe\"], cv = cv,\n",
+    "                       param_grid = modelDict[\"SVC\"][\"params\"], n_jobs = 1)\n",
+    "# modelDict[\"SVC\"] = Pipeline(estimators_SVC)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# create pipeline\n",
@@ -152,12 +261,22 @@
     "estimators_GBTC.append(('feature_union', feature_union))\n",
     "estimators_GBTC.append(('GBTC', GradientBoostingClassifier()))\n",
     "# estimators.append(models)\n",
+    "paramGrid_GBTC = [\n",
+    "    {\n",
+    "        \"GBTC__learning_rate\": [0.001, 0.01, 0.1],\n",
+    "        \"GBTC__n_estimators\": [50, 100, 200, 300, 400, 500],\n",
+    "        \"GBTC__max_depth\": [1, 3, 5, 10, 12]\n",
+    "    }\n",
+    "]\n",
+    "modelDict[\"GBTC\"] = [Pipeline(estimators_GBTC), paramGrid_GBTC]\n",
+    "gridcv_LR = GridSearchCV(estimator = modelDict[\"GBTC\"][0], cv = cv,\n",
+    "                       param_grid = modelDict[\"GBTC\"][1], n_jobs = 1)\n",
     "modelDict[\"gradientBosting\"] = Pipeline(estimators_GBTC)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 66,
    "metadata": {
     "scrolled": true
    },
@@ -166,50 +285,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Pipeline(memory=None,\n",
-      "     steps=[('feature_union', SelectFromModel(estimator=LinearSVC(C=1.0, class_weight=None, dual=True, fit_intercept=True,\n",
-      "     intercept_scaling=1, loss='squared_hinge', max_iter=1000,\n",
-      "     multi_class='ovr', penalty='l2', random_state=None, tol=0.0001,\n",
-      "     verbose=0),\n",
-      "        norm_order=1, prefit=Fals...ty='l2', random_state=None, solver='liblinear', tol=0.0001,\n",
-      "          verbose=0, warm_start=False))])\n",
       "Metrics for logistic\n",
       "{'accuracy': 0.55999999999999994, 'f1': 0.50657429607429605, 'precision': 0.61407661782661782, 'recall': 0.51237412913883507}\n",
       "\n",
       "\n",
-      "Pipeline(memory=None,\n",
-      "     steps=[('feature_union', SelectFromModel(estimator=LinearSVC(C=1.0, class_weight=None, dual=True, fit_intercept=True,\n",
-      "     intercept_scaling=1, loss='squared_hinge', max_iter=1000,\n",
-      "     multi_class='ovr', penalty='l2', random_state=None, tol=0.0001,\n",
-      "     verbose=0),\n",
-      "        norm_order=1, prefit=Fals...n_jobs=1,\n",
-      "            oob_score=False, random_state=None, verbose=0,\n",
-      "            warm_start=False))])\n",
       "Metrics for randomForest\n",
-      "{'accuracy': 0.55000000000000004, 'f1': 0.46982099609535888, 'precision': 0.58333000333000329, 'recall': 0.45226675285498813}\n",
+      "{'accuracy': 0.53499999999999992, 'f1': 0.47718709972744716, 'precision': 0.5924009324009325, 'recall': 0.46138116785175615}\n",
       "\n",
       "\n",
-      "Pipeline(memory=None,\n",
-      "     steps=[('feature_union', SelectFromModel(estimator=LinearSVC(C=1.0, class_weight=None, dual=True, fit_intercept=True,\n",
-      "     intercept_scaling=1, loss='squared_hinge', max_iter=1000,\n",
-      "     multi_class='ovr', penalty='l2', random_state=None, tol=0.0001,\n",
-      "     verbose=0),\n",
-      "        norm_order=1, prefit=Fals...,\n",
-      "  max_iter=-1, probability=False, random_state=None, shrinking=True,\n",
-      "  tol=0.001, verbose=False))])\n",
       "Metrics for SVC\n",
       "{'accuracy': 0.35999999999999999, 'f1': 0.504621863504922, 'precision': 0.49444444444444435, 'recall': 0.80264705882352949}\n",
       "\n",
       "\n",
-      "Pipeline(memory=None,\n",
-      "     steps=[('feature_union', SelectFromModel(estimator=LinearSVC(C=1.0, class_weight=None, dual=True, fit_intercept=True,\n",
-      "     intercept_scaling=1, loss='squared_hinge', max_iter=1000,\n",
-      "     multi_class='ovr', penalty='l2', random_state=None, tol=0.0001,\n",
-      "     verbose=0),\n",
-      "        norm_order=1, prefit=Fals...      presort='auto', random_state=None, subsample=1.0, verbose=0,\n",
-      "              warm_start=False))])\n",
       "Metrics for gradientBosting\n",
-      "{'accuracy': 0.55999999999999994, 'f1': 0.50430139544327179, 'precision': 0.54714285714285715, 'recall': 0.50649177619765862}\n",
+      "{'accuracy': 0.55999999999999994, 'f1': 0.49615496098104794, 'precision': 0.54168831168831166, 'recall': 0.49498383968972204}\n",
       "\n",
       "\n"
      ]
@@ -221,7 +310,7 @@
     "scoring = [\"accuracy\", \"f1\", \"precision\", \"recall\"]\n",
     "metrics = {}\n",
     "for modelName, model in modelDict.items():\n",
-    "    print(model)\n",
+    "#     print(model)\n",
     "    results = cross_validate(model, X, Y, cv=kfold,  scoring=scoring, )\n",
     "#     results = cross_val_score(estimator=model,\n",
     "#                               X=features,\n",
@@ -240,6 +329,33 @@
     "# results = cross_val_score(model, X, Y, cv=kfold)\n",
     "# print(results.mean())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
