--- a/src/mlPipeline/ML_notebook.ipynb
+++ b/src/mlPipeline/ML_notebook.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -21,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +21,7 @@
     "from sklearn.model_selection import cross_val_score, cross_validate\n",
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.pipeline import FeatureUnion\n",
-    "from sklearn.linear_model import LogisticRegression, LassoCV\n",
+    "from sklearn.linear_model import LogisticRegression, LassoCV, Lasso\n",
     "from sklearn.decomposition import PCA\n",
     "from sklearn.feature_selection import SelectKBest, SelectFromModel\n",
     "from sklearn.svm import SVC, LinearSVC\n",
@@ -43,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -54,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true,
     "scrolled": true
@@ -71,10 +62,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 69,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# feature selection union\n",
@@ -85,13 +74,15 @@
     "# clf = LassoCV()\n",
     "\n",
     "# Set a minimum threshold of 0.25\n",
-    "features = [(\"linSVC_dimReduction\", SelectFromModel(LinearSVC(), 0.25))]\n",
+    "features.append((\"linSVC_dimReduction\", SelectFromModel(LinearSVC(), 0.25)))\n",
+    "# features.append((\"lasso_dimReduction\", SelectFromModel(LassoCV(), 0.25)))\n",
     "# features.append(SelectFromModel(LinearSVC(C=0.01, penalty=\"l1\", dual=False),\n",
     "#                                 threshold=0.25, prefit = False))\n",
     "feature_union = FeatureUnion(features)\n",
     "featureSelectionParamGrid = {} # TODO implement feature selection for feature selection.\n",
     "modelDict = {}\n",
     "cv = 10\n",
+    "n_jobs = 3\n",
     "# TODO when you perform CV with this stuff consider doing memory option stuff\n",
     "scoring = [\"accuracy\", \"f1\", \"precision\", \"recall\"]\n",
     "importantMetric = \"f1\""
@@ -99,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 70,
    "metadata": {
     "scrolled": true
    },
@@ -121,7 +112,7 @@
     "                         \"params\": paramGrid_LR}\n",
     "modelDict[\"logistic\"][\"gridcv\"] = GridSearchCV(estimator = modelDict[\"logistic\"][\"pipe\"],\n",
     "                         param_grid = modelDict[\"logistic\"][\"params\"],\n",
-    "                         cv = cv, n_jobs = 1,\n",
+    "                         cv = cv, n_jobs = n_jobs, return_train_score = False,\n",
     "                         scoring = scoring, refit = importantMetric)\n",
     "# TODO understand how linearSVC works with these parameters\n",
     "\n",
@@ -148,7 +139,7 @@
     "                             \"params\": paramGrid_RF}\n",
     "modelDict[\"randomForest\"][\"gridcv\"] = GridSearchCV(estimator = modelDict[\"randomForest\"][\"pipe\"],\n",
     "                       param_grid = modelDict[\"randomForest\"][\"params\"],\n",
-    "                       cv = cv, n_jobs = 1,\n",
+    "                       cv = cv, n_jobs = n_jobs, return_train_score = False,\n",
     "                       scoring = scoring, refit = importantMetric)\n",
     "#TODO is it better to build RF trees to purity and prune?\n",
     "\n",
@@ -163,7 +154,7 @@
     "# estimators.append(models)\n",
     "paramGrid_SVC = [\n",
     "    {\n",
-    "        \"SVC__penalty\": ['l1', 'l2'],\n",
+    "        \"SVC__kernel\": ['rbf', 'poly', \"sigmoid\"],\n",
     "        \"SVC__C\": [1, 10, 100, 1000]\n",
     "    }\n",
     "]\n",
@@ -171,7 +162,7 @@
     "                    \"params\": paramGrid_SVC}\n",
     "modelDict[\"SVC\"][\"gridcv\"] = GridSearchCV(estimator = modelDict[\"SVC\"][\"pipe\"],\n",
     "                       param_grid = modelDict[\"SVC\"][\"params\"],\n",
-    "                       cv = cv, n_jobs = 1,\n",
+    "                       cv = cv, n_jobs = n_jobs, return_train_score = False,\n",
     "                       scoring = scoring, refit = importantMetric)\n",
     "\n",
     "\n",
@@ -192,59 +183,302 @@
     "                     \"params\": paramGrid_GBTC}\n",
     "modelDict[\"GBTC\"][\"gridcv\"] = GridSearchCV(estimator = modelDict[\"GBTC\"][\"pipe\"],\n",
     "                       param_grid = modelDict[\"GBTC\"][\"params\"],\n",
-    "                       cv = cv, n_jobs = 1,\n",
+    "                       cv = cv, n_jobs = n_jobs, return_train_score = False,\n",
     "                       scoring = scoring, refit = importantMetric)\n",
     "# modelDict[\"gradientBosting\"] = Pipeline(estimators_GBTC)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['logistic', 'randomForest', 'SVC', 'GBTC'])"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "modelDict.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# create pipeline\n",
-    "estimators_SVC = []\n",
-    "estimators_SVC.append(('feature_union', feature_union))\n",
-    "estimators_SVC.append(('SVC', SVC()))\n",
-    "# estimators.append(models)\n",
-    "paramGrid_SVC = [\n",
-    "    {\n",
-    "        \"SVC__penalty\": ['l1', 'l2'],\n",
-    "        \"SVC__C\": [1, 10, 100, 1000]\n",
-    "    }\n",
-    "]\n",
-    "modelDict[\"SVC\"] = {\"pipe\":Pipeline(estimators_SVC),\n",
-    "                    \"params\": paramGrid_SVC}\n",
-    "modelDict[\"SVC\"][\"gridcv\"] = GridSearchCV(estimator = modelDict[\"SVC\"][\"pipe\"], cv = cv,\n",
-    "                       param_grid = modelDict[\"SVC\"][\"params\"], n_jobs = 1)\n",
-    "# modelDict[\"SVC\"] = Pipeline(estimators_SVC)"
+    "def printBestModelStatistics(gridScoresCV, scoring, modelName):\n",
+    "    scoringDict = {}\n",
+    "    bestModelIndex = currModelDict[\"gridcv\"].best_index_\n",
+    "    for score in scoring:\n",
+    "        scoringDict[score] = gridScoresCV[\"mean_test_\" + score][bestModelIndex]\n",
+    "        outStr = \"For Model {}:\".format(modelName)\n",
+    "    for scoreName, scoreVal in scoringDict.items():\n",
+    "        outStr += \"\\n\\t{}: {}\".format(scoreName, np.round(scoreVal, decimals = 3))\n",
+    "    print(outStr)  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 76,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training logistic\n",
+      "For Model logistic:\n",
+      "\taccuracy:0.625\n",
+      "\tf1:0.642\n",
+      "\tprecision:0.656\n",
+      "\trecall:0.646\n",
+      "Best Model Parameters {'logistic__C': 100, 'logistic__penalty': 'l1'}\n",
+      "****************************************************************************************************\n",
+      "Training randomForest\n",
+      "For Model randomForest:\n",
+      "\taccuracy:0.615\n",
+      "\tf1:0.633\n",
+      "\tprecision:0.63\n",
+      "\trecall:0.654\n",
+      "Best Model Parameters {'RFC__criterion': 'gini', 'RFC__max_depth': None, 'RFC__max_features': 0.5, 'RFC__n_estimators': 5}\n",
+      "****************************************************************************************************\n",
+      "Training SVC\n",
+      "For Model SVC:\n",
+      "\taccuracy:0.535\n",
+      "\tf1:0.697\n",
+      "\tprecision:0.535\n",
+      "\trecall:1.0\n",
+      "Best Model Parameters {'SVC__C': 1, 'SVC__kernel': 'poly'}\n",
+      "****************************************************************************************************\n",
+      "Training GBTC\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ob2285/anaconda3/lib/python3.6/site-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 due to no predicted samples.\n",
+      "  'precision', 'predicted', average, warn_for)\n",
+      "/home/ob2285/anaconda3/lib/python3.6/site-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 due to no predicted samples.\n",
+      "  'precision', 'predicted', average, warn_for)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "For Model GBTC:\n",
+      "\taccuracy:0.535\n",
+      "\tf1:0.697\n",
+      "\tprecision:0.535\n",
+      "\trecall:1.0\n",
+      "Best Model Parameters {'GBTC__learning_rate': 0.001, 'GBTC__max_depth': 1, 'GBTC__n_estimators': 50}\n",
+      "****************************************************************************************************\n"
+     ]
+    }
+   ],
    "source": [
-    "# create pipeline\n",
-    "estimators_GBTC = []\n",
-    "estimators_GBTC.append(('feature_union', feature_union))\n",
-    "estimators_GBTC.append(('GBTC', GradientBoostingClassifier()))\n",
-    "# estimators.append(models)\n",
-    "paramGrid_GBTC = [\n",
-    "    {\n",
-    "        \"GBTC__learning_rate\": [0.001, 0.01, 0.1],\n",
-    "        \"GBTC__n_estimators\": [50, 100, 200, 300, 400, 500],\n",
-    "        \"GBTC__max_depth\": [1, 3, 5, 10, 12]\n",
-    "    }\n",
-    "]\n",
-    "modelDict[\"GBTC\"] = [Pipeline(estimators_GBTC), paramGrid_GBTC]\n",
-    "gridcv_LR = GridSearchCV(estimator = modelDict[\"GBTC\"][0], cv = cv,\n",
-    "                       param_grid = modelDict[\"GBTC\"][1], n_jobs = 1)\n",
-    "modelDict[\"gradientBosting\"] = Pipeline(estimators_GBTC)"
+    "for modelName, currModelDict in modelDict.items():\n",
+    "    print(\"Training {}\".format(modelName))\n",
+    "    currModelDict[\"gridcv\"].fit(X,Y)\n",
+    "    printBestModelStatistics(gridScoresCV = currModelDict[\"gridcv\"].cv_results_,\n",
+    "                         scoring = scoring, modelName = modelName)\n",
+    "    print(\"Best Model Parameters {}\".format(currModelDict[\"gridcv\"].best_params_))\n",
+    "    print(\"*\"*100)\n",
+    "#     break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'GBTC__learning_rate': 0.001, 'GBTC__max_depth': 1, 'GBTC__n_estimators': 50}"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "currModelDict[\"gridcv\"].best_params_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Pipeline(memory=None,\n",
+       "     steps=[('feature_union', FeatureUnion(n_jobs=1,\n",
+       "       transformer_list=[('linSVC_dimReduction', SelectFromModel(estimator=LinearSVC(C=1.0, class_weight=None, dual=True, fit_intercept=True,\n",
+       "     intercept_scaling=1, loss='squared_hinge', max_iter=1000,\n",
+       "     multi_class='ovr', penalty='l2', random_st...      presort='auto', random_state=None, subsample=1.0, verbose=0,\n",
+       "              warm_start=False))])"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "currModelDict[\"gridcv\"].best_estimator_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.60934862,  0.60539875,  0.63101533,  0.60208662,  0.64175126,\n",
+       "        0.63199824,  0.64175126,  0.6360675 ])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "currModelDict[\"gridcv\"].cv_results_[\"mean_test_f1\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "For Model Logistic:\n",
+      "\taccuracy:0.625\n",
+      "\tf1:0.642\n",
+      "\tprecision:0.656\n",
+      "\trecall:0.646\n"
+     ]
+    }
+   ],
+   "source": [
+    "gridScoresCV = currModelDict[\"gridcv\"].cv_results_\n",
+    "modelName = \"Logistic\"\n",
+    "scoringDict = {}\n",
+    "bestModelIndex = currModelDict[\"gridcv\"].best_index_\n",
+    "for score in scoring:\n",
+    "    scoringDict[score] = gridScoresCV[\"mean_test_\" + score][bestModelIndex]\n",
+    "outStr = \"For Model {}:\".format(modelName)\n",
+    "for scoreName, scoreVal in scoringDict.items():\n",
+    "    outStr += \"\\n\\t{}:{}\".format(scoreName, np.round(scoreVal, decimals = 3))\n",
+    "print(outStr)\n",
+    "def printBestModelStatistics(gridScoresCV, scoring, modelName):\n",
+    "    scoringDict = {}\n",
+    "    bestModelIndex = currModelDict[\"gridcv\"].best_index_\n",
+    "    for score in scoring:\n",
+    "        scoringDict[score] = gridScoresCV[\"mean_test_\" + score][bestModelIndex]\n",
+    "        outStr = \"For Model {}:\".format(modelName)\n",
+    "    for scoreName, scoreVal in scoringDict.items():\n",
+    "        outStr += \"\\n\\t{}:{}\".format(scoreName, np.round(scoreVal, decimals = 3))\n",
+    "    print(outStr)  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "For Model Logistic:\n",
+      "\taccuracy:0.625\n",
+      "\tf1:0.642\n",
+      "\tprecision:0.656\n",
+      "\trecall:0.646\n"
+     ]
+    }
+   ],
+   "source": [
+    "printBestModelStatistics(gridScoresCV = currModelDict[\"gridcv\"].cv_results_,\n",
+    "                         scoring = scoring, modelName = modelName)"
    ]
   },
   {
