added soem comments

--- a/src/mlPipeline/ML_notebook.ipynb
+++ b/src/mlPipeline/ML_notebook.ipynb
@@ -1,9 +1,27 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "# Machine Learning Pipeline\n",
+    "The work here expects that feature engineering has been applied to the data so all that needs to be done is reading in a data matrix and performing minimal preprocessing, feature selection, training, and performance metric ouptut. Everything is being done in a pipelien which runs straight from input to cv output, but I can fit it first and look at intermediate results if needed.\n",
+    "## Notes\n",
+    "\n",
+    "## TODO\n",
+    "1. Open up some of the pipeline so you can look at intermediate results like features selected.\n",
+    "2. Can feature selection be done in a cv way so you can pass all the intersection of all features instead of performing 1 feature selection pass on the current training set\n",
+    "3. Save the output. Everything is in a dictionary so you should be able to save everything and access the best model through this dictionary. \n",
+    "4. You'll need to perform permutation on the best model oen of these days\n",
+    "5. Set a seed everytime you perform k-fold shuffling so everything is trained on the same dataset."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%load_ext autoreload\n",
@@ -30,6 +48,13 @@
     "# from sklearn.feature_selection import SelectFromModel\n",
     "# from sklearn.linear_model import LassoCV\n",
     "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Read in the Data"
    ]
   },
   {
@@ -61,6 +86,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Feature Selection"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 69,
    "metadata": {},
@@ -79,13 +111,14 @@
     "# features.append(SelectFromModel(LinearSVC(C=0.01, penalty=\"l1\", dual=False),\n",
     "#                                 threshold=0.25, prefit = False))\n",
     "feature_union = FeatureUnion(features)\n",
-    "featureSelectionParamGrid = {} # TODO implement feature selection for feature selection.\n",
-    "modelDict = {}\n",
-    "cv = 10\n",
-    "n_jobs = 3\n",
-    "# TODO when you perform CV with this stuff consider doing memory option stuff\n",
-    "scoring = [\"accuracy\", \"f1\", \"precision\", \"recall\"]\n",
-    "importantMetric = \"f1\""
+    "featureSelectionParamGrid = {} # TODO implement feature selection for feature selection."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Models"
    ]
   },
   {
@@ -96,6 +129,14 @@
    },
    "outputs": [],
    "source": [
+    "modelDict = {}\n",
+    "cv = 10\n",
+    "n_jobs = 3\n",
+    "# TODO when you perform CV with this stuff consider doing memory option stuff\n",
+    "scoring = [\"accuracy\", \"f1\", \"precision\", \"recall\"]\n",
+    "importantMetric = \"f1\"\n",
+    "\n",
+    "\n",
     "\n",
     "# create pipeline for logisttic Regression\n",
     "estimators_LR = []\n",
