model saved and code for permutation test is up

--- a/ML_notebook.ipynb
+++ b/ML_notebook.ipynb
@@ -18,9 +18,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 82,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -29,7 +38,9 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from src.mlPipeline.modelTraining import performGridSearch\n",
-    "from src.mlPipeline.plotting import plotBestModelComparison"
+    "from src.mlPipeline.plotting import plotBestModelComparison\n",
+    "import pandas as pd\n",
+    "import pickle"
    ]
   },
   {
@@ -90,18 +101,22 @@
    ],
    "source": [
     "dataPath = \"data/MLData/largeData_seq_data_ml_bi.csv\"\n",
+    "modelDictPicklePath = \"data/modelDict.pkl\"\n",
     "modelDictAll = performGridSearch(dataPath = dataPath)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 87,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "# modelDictAll = modelDict"
+    "# modelDictAll = modelDict\n",
+    "modelDictPicklePath = \"data/modelDict.pkl\"\n",
+    "with open(modelDictPicklePath, \"wb\") as pklFile:\n",
+    "    pickle.dump(modelDictAll, pklFile)"
    ]
   },
   {
@@ -219,15 +234,348 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from time import time\n",
+    "start = time()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running iteration 0 in 0.0004374980926513672 seconds\n",
+      "Running iteration 10 in 142.70513892173767 seconds\n",
+      "Running iteration 20 in 140.95882320404053 seconds\n",
+      "Running iteration 30 in 142.8495650291443 seconds\n",
+      "Running iteration 40 in 143.63306164741516 seconds\n",
+      "Running iteration 50 in 149.58917498588562 seconds\n",
+      "Running iteration 60 in 143.65398240089417 seconds\n",
+      "Running iteration 70 in 145.91169714927673 seconds\n",
+      "Running iteration 80 in 142.4729940891266 seconds\n",
+      "Running iteration 90 in 139.5033118724823 seconds\n",
+      "Running iteration 100 in 142.23135137557983 seconds\n",
+      "Running iteration 110 in 141.36219310760498 seconds\n",
+      "Running iteration 120 in 142.11380338668823 seconds\n",
+      "Running iteration 130 in 141.0321683883667 seconds\n",
+      "Running iteration 140 in 141.4959008693695 seconds\n",
+      "Running iteration 150 in 145.7419421672821 seconds\n",
+      "Running iteration 160 in 143.68236231803894 seconds\n",
+      "Running iteration 170 in 141.1173813343048 seconds\n",
+      "Running iteration 180 in 141.3674533367157 seconds\n",
+      "Running iteration 190 in 137.23936581611633 seconds\n",
+      "Running iteration 200 in 134.9801824092865 seconds\n",
+      "Running iteration 210 in 143.83212518692017 seconds\n",
+      "Running iteration 220 in 141.60296201705933 seconds\n",
+      "Running iteration 230 in 137.5507960319519 seconds\n",
+      "Running iteration 240 in 142.37499690055847 seconds\n",
+      "Running iteration 250 in 141.08928227424622 seconds\n",
+      "Running iteration 260 in 141.89335227012634 seconds\n",
+      "Running iteration 270 in 145.4269299507141 seconds\n",
+      "Running iteration 280 in 142.8781499862671 seconds\n",
+      "Running iteration 290 in 138.02527904510498 seconds\n",
+      "Running iteration 300 in 144.21258115768433 seconds\n",
+      "Running iteration 310 in 138.16428899765015 seconds\n",
+      "Running iteration 320 in 146.2566864490509 seconds\n",
+      "Running iteration 330 in 141.67729711532593 seconds\n",
+      "Running iteration 340 in 144.3915617465973 seconds\n",
+      "Running iteration 350 in 139.1183409690857 seconds\n",
+      "Running iteration 360 in 138.0365810394287 seconds\n",
+      "Running iteration 370 in 142.86593914031982 seconds\n",
+      "Running iteration 380 in 145.70092964172363 seconds\n",
+      "Running iteration 390 in 142.60735058784485 seconds\n",
+      "Running iteration 400 in 145.1257677078247 seconds\n",
+      "Running iteration 410 in 136.24324131011963 seconds\n",
+      "Running iteration 420 in 141.1400580406189 seconds\n",
+      "Running iteration 430 in 141.71698331832886 seconds\n",
+      "Running iteration 440 in 139.9148678779602 seconds\n",
+      "Running iteration 450 in 146.21633410453796 seconds\n",
+      "Running iteration 460 in 133.3146800994873 seconds\n",
+      "Running iteration 470 in 146.41074061393738 seconds\n",
+      "Running iteration 480 in 138.5430977344513 seconds\n",
+      "Running iteration 490 in 139.85931992530823 seconds\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Ttest_indResult(statistic=-81.82435501231497, pvalue=0.0)"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import cross_val_score\n",
+    "from time import time\n",
+    "nRepeats = 500\n",
+    "modelDict = modelDictAll[\"GBTC\"]\n",
+    "bestModel = modelDict[\"gridcv\"].best_estimator_\n",
+    "scoringMetric = modelDict[\"refitMetric\"]\n",
+    "df = pd.read_csv(dataPath)\n",
+    "df = df.set_index(\"isolate\")\n",
+    "X_df = df.drop(labels = [\"pbr_res\"], axis = 1)\n",
+    "X = X_df.values\n",
+    "Y_df = df[\"pbr_res\"]\n",
+    "Y_shuffle = np.array(Y_df.values)\n",
+    "Y = np.array(Y_df.values)\n",
+    "allScoresMeanCV_shuffle = np.full(shape = nRepeats, fill_value = -1,\n",
+    "                                  dtype = float)\n",
+    "allScoresStdCV_shuffle = np.full(shape = nRepeats, fill_value = -1,\n",
+    "                                 dtype = float)\n",
+    "allScoresMeanCV_true = np.full(shape = nRepeats, fill_value = -1,\n",
+    "                               dtype = float)\n",
+    "allScoresStdCV_true = np.full(shape = nRepeats, fill_value = -1,\n",
+    "                              dtype = float)\n",
+    "\n",
+    "# YShuffle = np.random.shuffle(Y)\n",
+    "shuffledIdx = np.arange(Y.shape[0])\n",
+    "\n",
+    "\n",
+    "n_cv = 10\n",
+    "\n",
+    "start = time()\n",
+    "for i in range(nRepeats):\n",
+    "    np.random.shuffle(shuffledIdx)\n",
+    "#     print(i)\n",
+    "    if np.mod(i, 10) == 0:\n",
+    "        iterTime = time() - start\n",
+    "        print(\"Running iteration {} in {} seconds\".format(i, iterTime))\n",
+    "        start = time()\n",
+    "    np.random.shuffle(Y_shuffle)\n",
+    "    currScoresCV_shuffle = cross_val_score(estimator = bestModel, X = X, y = Y_shuffle,\n",
+    "                                           cv = n_cv, n_jobs = 3, verbose = 0, \n",
+    "                                           scoring = scoringMetric)\n",
+    "    X = X[shuffledIdx, :]\n",
+    "    Y = Y[shuffledIdx]\n",
+    "    currScoresCV_true = cross_val_score(estimator = bestModel, X = X, y = Y,\n",
+    "                                           cv = n_cv, n_jobs = 3, verbose = 0, \n",
+    "                                           scoring = scoringMetric)\n",
+    "    allScoresMeanCV_shuffle[i] = currScoresCV_shuffle.mean()\n",
+    "    allScoresStdCV_shuffle[i] = np.std(currScoresCV_shuffle)\n",
+    "    allScoresMeanCV_true[i] = currScoresCV_true.mean()\n",
+    "    allScoresStdCV_true[i] = np.std(currScoresCV_true)\n",
+    "#     print(allScoresMeanCV_shuffle)\n",
+    "#     print(allScoresMeanCV_true)\n",
+    "    \n",
+    "\n",
     "# take in best model\n",
     "# take in data\n",
     "# take in n for permutations\n",
     "# take in optional test set\n",
-    "# take in cv if not test set."
+    "# take in cv if not test set.\n",
+    "from scipy.stats import ttest_ind\n",
+    "ttest_ind(a = allScoresMeanCV_shuffle,\n",
+    "          b = allScoresMeanCV_true)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "shuffledIdx"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 1, 2, 3, 4, 5, 6, 7, 8, 9])"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.arange(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 0 0 0 0 0 1 0 0 0 0 0 1 0 1 0 1 0 1 1 0 0 1 1 0 0 0 0 1 0 0 1 1 0 1 1 1\n",
+      " 0 0 1 0 1 1 1 1 1 1 0 0 0 1 0 0 0 0 1 1 1 1 1 0 0 1 0 0 1 0 1 1 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 1 0 1 0 1 0 0 0 1 0 1 1 0 0 1 0 1 1 1 0 0 0 0 0 1 0 1 0 1 0 0\n",
+      " 1 1 0 1 1 1 1 0 0 1 1 1 0 0 1 1 1 1 1 1 0 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1\n",
+      " 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 0 1 0 1 0 0 1 1 1 1 1 1 1 1 1 1\n",
+      " 1 0 1 0 1 0 1 0 0 1 1 0 1]\n",
+      "*\n",
+      "[1 1 0 1 0 0 1 0 1 1 0 0 1 1 0 1 1 0 1 1 1 1 1 1 0 1 1 1 1 0 1 1 1 0 0 1 0\n",
+      " 1 0 0 1 1 1 0 0 1 0 1 0 0 1 1 0 0 1 0 0 1 1 1 0 0 1 1 0 0 0 0 0 1 1 1 1 1\n",
+      " 0 1 0 1 1 1 0 0 1 0 0 0 1 1 1 1 0 1 1 0 0 0 0 1 1 1 0 1 0 1 1 1 0 1 0 1 0\n",
+      " 1 0 1 0 0 0 0 1 1 1 1 0 1 0 1 1 1 0 1 1 1 1 0 1 0 1 1 1 1 1 0 1 0 1 1 0 0\n",
+      " 0 1 1 1 0 0 0 0 0 1 1 0 1 0 1 1 0 1 1 1 0 1 1 0 1 1 1 1 0 1 1 1 1 0 1 0 0\n",
+      " 1 0 0 1 1 1 0 1 1 1 0 1 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(Y)\n",
+    "print(\"*\")\n",
+    "print(Y_shuffle)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.7917147344502476\n"
+     ]
+    }
+   ],
+   "source": [
+    "# print(allScoresMeanCV_true)\n",
+    "print(allScoresMeanCV_true.mean())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.6713257240119844\n"
+     ]
+    }
+   ],
+   "source": [
+    "# print(allScoresMeanCV_shuffle)\n",
+    "print(allScoresMeanCV_shuffle.mean())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ttest_indResult(statistic=-10.2938403477768, pvalue=5.708760935926584e-09)"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from scipy.stats import ttest_ind\n",
+    "ttest_ind(a = allScoresMeanCV_shuffle,\n",
+    "          b = allScoresMeanCV_true)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/oliver/anaconda3/lib/python3.5/site-packages/ipykernel/__main__.py:1: RuntimeWarning: divide by zero encountered in remainder\n",
+      "  if __name__ == '__main__':\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.mod(10, 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "temp = cross_val_score(estimator = bestModel, X = X, y = Y, cv = 10, n_jobs = 3, verbose = 0,\n",
+    "               scoring = modelDictAll[\"GBTC\"]['refitMetric'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6860170167441533"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temp.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.mod(10, 4)"
    ]
   },
   {
@@ -239,10 +587,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Pipeline(memory=None,\n",
+       "     steps=[('feature_union', FeatureUnion(n_jobs=1,\n",
+       "       transformer_list=[('linSVC_dimReduction', SelectFromModel(estimator=LinearSVC(C=1.0, class_weight=None, dual=True, fit_intercept=True,\n",
+       "     intercept_scaling=1, loss='squared_hinge', max_iter=1000,\n",
+       "     multi_class='ovr', penalty='l2', random_st...      presort='auto', random_state=None, subsample=1.0, verbose=0,\n",
+       "              warm_start=False))])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bestModel.best_estimator_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['gridcv', 'refitMetric', 'pipe', 'params'])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "modelDictAll[\"GBTC\"].keys()"
+   ]
   },
   {
    "cell_type": "code",
@@ -253,10 +639,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Pipeline(memory=None,\n",
+       "     steps=[('feature_union', FeatureUnion(n_jobs=1,\n",
+       "       transformer_list=[('linSVC_dimReduction', SelectFromModel(estimator=LinearSVC(C=1.0, class_weight=None, dual=True, fit_intercept=True,\n",
+       "     intercept_scaling=1, loss='squared_hinge', max_iter=1000,\n",
+       "     multi_class='ovr', penalty='l2', random_st...      presort='auto', random_state=None, subsample=1.0, verbose=0,\n",
+       "              warm_start=False))])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "modelDictAll[\"GBTC\"][\"pipe\"]"
+   ]
   },
   {
    "cell_type": "code",
