some first rty plotting code

--- a/ML_notebook.ipynb
+++ b/ML_notebook.ipynb
@@ -19,7 +19,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%load_ext autoreload\n",
@@ -72,7 +74,8 @@
     "import numpy as np\n",
     "import glob\n",
     "dataPath = \"data/MLData/pbr_ml_project _datasets_20180423/\"\n",
-    "dataPrefix = \"dataset_2_\""
+    "dataPrefix = \"dataset_2_\"\n",
+    "modelDictPicklePath = \"data/modelDictMultiDataRun.pkl\""
    ]
   },
   {
@@ -862,17 +865,403 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TODO: add in warning if f1 is zero.\n",
+      "TODO: get sd bars if you can get them too. Grab it the same way you grab mean_test wtih std_test_\n",
+      "TODO: add in warning if f1 is zero.\n",
+      "TODO: get sd bars if you can get them too. Grab it the same way you grab mean_test wtih std_test_\n",
+      "TODO: add in warning if f1 is zero.\n",
+      "TODO: get sd bars if you can get them too. Grab it the same way you grab mean_test wtih std_test_\n",
+      "TODO: add in warning if f1 is zero.\n",
+      "TODO: get sd bars if you can get them too. Grab it the same way you grab mean_test wtih std_test_\n",
+      "TODO: add in warning if f1 is zero.\n",
+      "TODO: get sd bars if you can get them too. Grab it the same way you grab mean_test wtih std_test_\n",
+      "TODO: add in warning if f1 is zero.\n",
+      "TODO: get sd bars if you can get them too. Grab it the same way you grab mean_test wtih std_test_\n",
+      "TODO: add in warning if f1 is zero.\n",
+      "TODO: get sd bars if you can get them too. Grab it the same way you grab mean_test wtih std_test_\n",
+      "TODO: add in warning if f1 is zero.\n",
+      "TODO: get sd bars if you can get them too. Grab it the same way you grab mean_test wtih std_test_\n",
+      "TODO: add in warning if f1 is zero.\n",
+      "TODO: get sd bars if you can get them too. Grab it the same way you grab mean_test wtih std_test_\n",
+      "TODO: add in warning if f1 is zero.\n",
+      "TODO: get sd bars if you can get them too. Grab it the same way you grab mean_test wtih std_test_\n",
+      "TODO: add in warning if f1 is zero.\n",
+      "TODO: get sd bars if you can get them too. Grab it the same way you grab mean_test wtih std_test_\n",
+      "TODO: add in warning if f1 is zero.\n",
+      "TODO: get sd bars if you can get them too. Grab it the same way you grab mean_test wtih std_test_\n",
+      "TODO: add in warning if f1 is zero.\n",
+      "TODO: get sd bars if you can get them too. Grab it the same way you grab mean_test wtih std_test_\n",
+      "TODO: add in warning if f1 is zero.\n",
+      "TODO: get sd bars if you can get them too. Grab it the same way you grab mean_test wtih std_test_\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'dataset_10_': ('randomForest', 0.85000000000000009),\n",
+       " 'dataset_11_': ('logistic', 0.82570170327321579),\n",
+       " 'dataset_12_': ('logistic', 0.87585499316005477),\n",
+       " 'dataset_13_': ('logistic', 0.76513169799939684),\n",
+       " 'dataset_14_': ('randomForest', 0.86703296703296706),\n",
+       " 'dataset_1_': ('GBTC', 0.81975315643834989),\n",
+       " 'dataset_2_': ('randomForest', 0.90213675213675226),\n",
+       " 'dataset_3_': ('GBTC', 0.81636900792446143),\n",
+       " 'dataset_4_': ('randomForest', 0.82582582582582587),\n",
+       " 'dataset_5_': ('randomForest', 0.78888366670483889),\n",
+       " 'dataset_6_': ('GBTC', 0.84375),\n",
+       " 'dataset_7_': ('GBTC', 0.73484880156075805),\n",
+       " 'dataset_8_': ('GBTC', 0.86666666666666659),\n",
+       " 'dataset_9_': ('randomForest', 0.77182979622004022)}"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def findBestModel(modelList, resultKey):\n",
+    "    print(\"TODO: add in warning if f1 is zero.\")\n",
+    "    print(\"TODO: get sd bars if you can get them too. Grab it the same way you grab mean_test wtih std_test_\")\n",
+    "    bestModelName = \"\"\n",
+    "    bestPerformance = 0# this assumes we want to maximize performance\n",
+    "    for modelName, cvDict in modelList.items():\n",
+    "    #     print(modelName)\n",
+    "        currModelIndex = cvDict[\"gridcv\"].best_index_\n",
+    "        currModelPerformance = cvDict[\"gridcv\"].cv_results_[resultKey][currModelIndex]\n",
+    "        if currModelPerformance >= bestPerformance:\n",
+    "            bestModelName = modelName\n",
+    "            bestPerformance = currModelPerformance\n",
+    "    return(bestModelName, bestPerformance)\n",
+    "\n",
+    "\n",
+    "\n",
+    "from collections import defaultdict\n",
+    "allDataModelDict = modelDictHolder\n",
+    "dataSetComparisonList = list(allDataModelDict.keys())\n",
+    "compMetric = \"roc_auc\"\n",
+    "resultKey = \"mean_test_\" + compMetric\n",
+    "dataSetComparisonList\n",
+    "datasetBestModelDict = {}\n",
+    "for datasetName in dataSetComparisonList:\n",
+    "#     print(datasetName)\n",
+    "    modelList = allDataModelDict[datasetName]\n",
+    "    dataSetBestPerformance  = findBestModel(modelList, resultKey)\n",
+    "    datasetBestModelDict[datasetName] = dataSetBestPerformance\n",
+    "    # determine best performing model for this dataset.\n",
+    "    # this means you'll have to iterate through each model\n",
+    "    # find its best parameters, and compare to all other model parameters.\n",
+    "#     for model in modelList:\n",
+    "#         print(model)\n",
+    "#         bestModel = \n",
+    "datasetBestModelDict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "resultKey = resultKey\n",
+    "bestModelName = \"\"\n",
+    "bestPerformance = 0# this assumes we want to maximize performance\n",
+    "for modelName, cvDict in modelList.items():\n",
+    "#     print(modelName)\n",
+    "    currModelIndex = cvDict[\"gridcv\"].best_index_\n",
+    "    currModelPerformance = cvDict[\"gridcv\"].cv_results_[resultKey][currModelIndex]\n",
+    "    if currModelPerformance >= bestPerformance:\n",
+    "        bestModelName = modelName\n",
+    "        bestPerformance = currModelPerformance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'randomForest'"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bestModelName"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.86703296703296706"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bestPerformance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'dataset_14_'"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datasetName"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# modelDictHolder[\"dataset_10_\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "temp = {\"d1\":{\"logistic\": 1, \"SVC\": 0, \"RF\": 2},\n",
+    "        \"d2\":{\"logistic\": 1, \"SVC\": 5, \"RF\": 2},\n",
+    "        \"d3\":{\"logistic\": 1, \"SVC\": 0, \"RF\": 6}}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>d1</th>\n",
+       "      <th>d2</th>\n",
+       "      <th>d3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>RF</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SVC</th>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>logistic</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          d1  d2  d3\n",
+       "RF         2   2   6\n",
+       "SVC        0   5   0\n",
+       "logistic   1   1   1"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.DataFrame(temp)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 34,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# modelDictPicklePath = \"data/modelDictMultiDataRun.pkl\"\n",
-    "\n",
-    "# with open(modelDictPicklePath, \"rb\") as pklFile:\n",
-    "#     modelDictAll = pickle.load(pklFile)"
+    "datasetBestModelDict = defaultdict(lambda: defaultdict(dict))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defaultdict(dict, {})"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datasetBestModelDict[\"temp\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(modelDictPicklePath, \"rb\") as pklFile:\n",
+    "    modelDictHolder = pickle.load(pklFile)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.78269230769230769"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bestModelIndex = modelDictHolder[\"dataset_10_\"][\"GBTC\"][\"gridcv\"].best_index_\n",
+    "modelDictHolder[\"dataset_10_\"][\"GBTC\"][\"gridcv\"].cv_results_[\"mean_test_roc_auc\"][bestModelIndex]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1255,7 +1644,7 @@
    "outputs": [],
    "source": [
     "# modelDictAll = modelDict\n",
-    "modelDictPicklePath = \"data/modelDictMultiDataRun.pkl\"\n",
+    "# modelDictPicklePath = \"data/modelDictMultiDataRun.pkl\"\n",
     "with open(modelDictPicklePath, \"wb\") as pklFile:\n",
     "    pickle.dump(modelDictHolder, pklFile)\n"
    ]
