made some changes so for undefined variables

--- a/ML_notebook.ipynb
+++ b/ML_notebook.ipynb
@@ -18,18 +18,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -47,7 +38,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# create your own feature extractor which looks at a given set of features to use\n",
@@ -59,7 +52,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -896,8 +891,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "with open(modelDictPicklePath, \"rb\") as pklFile:\n",
@@ -1415,6 +1412,7 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -1591,8 +1589,8 @@
    "source": [
     "# modelDictAll = modelDict\n",
     "# modelDictPicklePath = \"data/modelDictMultiDataRun.pkl\"\n",
-    "with open(modelDictPicklePath, \"wb\") as pklFile:\n",
-    "    pickle.dump(modelDictHolder, pklFile)\n"
+    "# with open(modelDictPicklePath, \"wb\") as pklFile:\n",
+    "#     pickle.dump(modelDictHolder, pklFile)\n"
    ]
   },
   {
@@ -1910,7 +1908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1952,7 +1950,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "modelName = \"logistic\"\n",
+    "modelDict = allDataModelDict[\"dataset_12_\"][modelName]\n",
+    "bestModel = copy.deepcopy(modelDict[\"gridcv\"].best_estimator_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -1961,19 +1970,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running iteration 0 in 0.0005571842193603516 seconds\n",
-      "Running iteration 10 in 3.3207790851593018 seconds\n"
+      "Running iteration 0 in 0.0003325939178466797 seconds\n",
+      "Running iteration 10 in 1.3743243217468262 seconds\n",
+      "Running iteration 20 in 1.4126698970794678 seconds\n",
+      "Running iteration 30 in 1.2446925640106201 seconds\n",
+      "Running iteration 40 in 1.2469680309295654 seconds\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "MannwhitneyuResult(statistic=0.0, pvalue=1.82922767694855e-05)"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -2059,51 +2061,55 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.7917147344502476\n"
+      "0.497708618331\n"
      ]
     }
    ],
    "source": [
     "# print(allScoresMeanCV_true)\n",
-    "print(allScoresMeanCV_true.mean())"
+    "print(allAUC_shuffle.mean())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.6713257240119844\n"
+      "0.845360237118\n"
      ]
     }
    ],
    "source": [
     "# print(allScoresMeanCV_shuffle)\n",
-    "print(allScoresMeanCV_shuffle.mean())"
+    "print(allAUC_true.mean())"
    ]
   },
   {
@@ -3399,7 +3405,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -3413,7 +3419,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
